syntax = "proto3";

package calculator;
option go_package="calculatorpb";

message CalculatorRequest {
    int32 num_one = 1;
    int32 num_two = 2;
}

message CalculatorResponse {
    int32 result = 1;
}

service CalculatorService {
    // Unary
    rpc Sum(CalculatorRequest) returns (CalculatorResponse) {};
}
